[JBASMP-49] Add the ability to override the artifact information for the run and start goals.